# routes/orderRoutes.js
@@ -1,21 +1,11 @@
-// routes/orderRoutes.js
 const express = require("express");
-const {
-  getAllOrders,
-  getOrderById,
-  createOrder,
-  updateOrder,
-  deleteOrder,
-} = require("../controllers/orderController");
-const ensureAuth = require("../middleware/ensureAuth");
-
 const router = express.Router();
+const orderController = require("../controllers/orderController");
 
-// Todas las rutas protegidas con ensureAuth
-router.get("/", ensureAuth, getAllOrders);
-router.get("/:id", ensureAuth, getOrderById);
-router.post("/", ensureAuth, createOrder);
-router.put("/:id", ensureAuth, updateOrder);
-router.delete("/:id", ensureAuth, deleteOrder);
+router.get("/", orderController.getAllOrders);
+router.get("/:id", orderController.getOrderById);
+router.post("/", orderController.createOrder);
+router.put("/:id", orderController.updateOrder);
+router.delete("/:id", orderController.deleteOrder);
 
 module.exports = router;
