# routes/productRoutes.js
@@ -1,21 +1,11 @@
-// routes/productRoutes.js
 const express = require("express");
-const {
-  getAllProducts,
-  getProductById,
-  createProduct,
-  updateProduct,
-  deleteProduct,
-} = require("../controllers/productController");
-const ensureAuth = require("../middleware/ensureAuth");
-
 const router = express.Router();
+const productController = require("../controllers/productController");
 
-// Todas las rutas protegidas con ensureAuth
-router.get("/", ensureAuth, getAllProducts);
-router.get("/:id", ensureAuth, getProductById);
-router.post("/", ensureAuth, createProduct);
-router.put("/:id", ensureAuth, updateProduct);
-router.delete("/:id", ensureAuth, deleteProduct);
+router.get("/", productController.getAllProducts);
+router.get("/:id", productController.getProductById);
+router.post("/", productController.createProduct);
+router.put("/:id", productController.updateProduct);
+router.delete("/:id", productController.deleteProduct);
 
 module.exports = router;
